# traefikctl

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
.skills/traefikctl/: SKILL.md
examples/: headers.yml
src/: cli.rs  config.rs  main.rs  traefik.rs  validation.rs
src/commands/: add.rs  add_cert.rs  add_middleware.rs  doctor.rs  init_acme.rs  init_ca.rs  list.rs  mod.rs  remove.rs  remove_middleware.rs  update.rs
